tests/snapshots/examples_fixtures/aoc__2025__aoc_day3_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day3_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day3_part2.flx:41:17
   |
41 | let non_empty = [trim(line) | line <- lines, trim(line) != ""]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day3_part2.flx:42:19
   |
42 | let bank_values = [bank_value_k12(line) | line <- non_empty]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day3_part2.flx:43:7
   |
43 | print(sum(bank_values))
   |       ^^^

Hint:
  Define it first: let sum = ...;

Found 3 errors.
== stdout ==
<not executed>
